# skool

./: .dockerignore  Cargo.toml  docker-compose.yml  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: docker.yaml
agenda/: Cargo.toml  README.md
agenda/src/: lib.rs
cookie_store/src/: cookie_store.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
scrape/: Cargo.toml
scrape/src/: lib.rs
skolplattformen/: Cargo.toml  README.md
skolplattformen/src/: ascii85.rs  auth.rs  client.rs  crypto.rs  lib.rs  main.rs  schedule.rs  session.rs  util.rs
skool/: Cargo.toml  Dockerfile  sqlx-data.json
skool-cookie/: Cargo.toml
skool-cookie/derive-cookie/: Cargo.toml
skool-cookie/skool-cookie-derive/: Cargo.toml
skool-cookie/skool-cookie-derive/src/: lib.rs
skool-cookie/src/: crypto.rs  lib.rs
skool-crypto/: Cargo.toml
skool-crypto/src/: crypto.rs  lib.rs
skool-web/: package.json
skool-web/components/: login.tsx
skool-web/components/google/: auth.tsx  calendars.tsx
skool-web/components/layout/: layout.module.scss  layout.tsx
skool-web/components/timetable/: lesson.module.scss  lesson.tsx  scale.module.scss  scale.tsx  timetable.module.scss  timetable.tsx
skool-web/lib/: api.ts  auth.tsx  retry.ts  schedule.ts  session.ts  time.ts
skool-web/lib/google/: calendar.ts  oauth.ts
skool-web/pages/: _app.tsx  _document.tsx  index.tsx  login.module.scss  login.tsx  schedule.tsx  tos.tsx
skool-web/pages/api/auth/redirect/: google.ts
skool-web/pages/export/: google.tsx
skool-web/src/: app.css  app.html
skool-web/src/lib/: Button.svelte  Header.svelte  api.ts  auth.ts  schedule.ts
skool-web/src/lib/components/: Button.svelte  Header.svelte
skool-web/src/lib/timetable/: Timetable.svelte
skool-web/src/routes/: +layout.svelte  +page.svelte
skool-web/src/routes/login/: +page.svelte
skool-web/src/routes/schedule/: +page.svelte
skool-web/styles/: globals.css
skool/migrations/: 1_credentials.up.sql  2_classes.down.sql  2_classes.up.sql  3_sharing.up.sql  4_last_used.down.sql  4_last_used.up.sql
skool/src/: class.rs  credentials.rs  crypt.rs  error.rs  extractor.rs  lib.rs  log.rs  logging.rs  main.rs  session.rs  share.rs  skolplattformen.rs  token.rs  util.rs
skool/src/routes/: auth.rs  classes.rs  credentials.rs  mod.rs  schedule.rs
skool/src/routes/schedule/: links.rs
tracing-actix/: Cargo.toml
webtoken/: Cargo.toml
webtoken/src/: crypto.rs  lib.rs
