[package]
name = "skool-agenda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
csscolorparser = { version = "0.6.2", features = ["serde"] }
icalendar = "0.13.1"
serde = { version = "1.0.145", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde"] }

[features]
