[package]
name = "skool-agenda"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
csscolorparser = { version = "0.6.2", features = ["serde"] }
icalendar = { workspace = true }
serde = { version = "1.0.133", features = ["derive"] }
uuid = { version = "1.3.2", features = ["serde"] }

[features]
