[package]
name = "skolplattformen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.8", features = ["cookies", "json"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
dotenv = "0.15.0"
scraper = "0.12.0"
scrape = { path = "../scrape" }
reqwest_cookie_store = "0.2.0"
cookie_store = "0.15.1"
serde = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.30"
rmp-serde = "0.15.5"
aes-gcm-siv = "0.10.3"
rand = "0.8.4"

[features]
