[package]
name = "skolplattformen"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["cookies", "json"] }
tracing = "0.1.29"
reqwest_cookie_store = "0.3.0"
cookie_store = "0.16.1"
serde = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.30"
chrono = "0.4.19"
skool-agenda = { path = "../agenda" }
chrono-tz = "0.6.1"
uuid = { version = "0.8.2", features = ["v5"] }
csscolorparser = { version = "0.6.0", features = ["serde"] }
select = "0.5.0"

[features]

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = "0.4.2"
