[package]
name = "skolplattformen"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["cookies", "json"] }
tracing = "0.1.29"
reqwest_cookie_store = "0.5.0"
cookie_store = "0.19.0"
serde = "1.0.145"
serde_json = "1.0.94"
thiserror = "1.0.30"
chrono = "0.4.23"
skool-agenda = { path = "../agenda" }
chrono-tz = "0.8.0"
uuid = { version = "1.1.2", features = ["v5"] }
csscolorparser = { version = "0.6.2", features = ["serde"] }
select = "0.5.0"

[dev-dependencies]
async-once-cell = "0.4.2"
dotenv = "0.15.0"
tokio = { version = "1.21.2", default-features = false, features = ["rt", "macros"] }
tokio-test = "0.4.2"
