[package]
name = "skool-cookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
aes-gcm-siv = "0.10.3"
rmp-serde = "0.15.5"
rand = "0.8.4"
thiserror = "1.0.30"
derive-cookie = { path = "derive-cookie" }
serde = { version = "1.0.133", features = ["derive"] }
futures = "0.3.19"
base64 = "0.13.0"
