[package]
name = "skool"
version = "0.4.1"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.145", features = ["derive"] }
skolplattformen = { path = "../skolplattformen" }
thiserror = "1.0.37"
futures = "0.3.19"
actix-cors = "0.6.1"
chrono = "0.4.23"
dotenv = "0.15.0"
reqwest = "0.11.10"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
skool-agenda = { path = "../agenda" }
mime = "0.3.16"
auth1-sdk = { git = "https://github.com/skolorna/auth1", branch = "develop", version = "0.1.2", features = ["actix"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "offline"] }
clap = { version = "3.2.20", features = ["derive", "env"] }
aes-gcm-siv = "0.11.1"
rmp-serde = "1.1.1"
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
sentry = "0.28.0"
sentry-actix = "0.29.1"
deadpool-redis = "0.11.0"
sentry-tracing = "0.28.0"
anyhow = "1.0.66"
blake3 = "1.3.1"
base64 = "0.13.1"
