[package]
name = "skool"
version = "0.4.7"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.145", features = ["derive"] }
skolplattformen = { path = "../skolplattformen" }
thiserror = "1.0.37"
futures = "0.3.19"
actix-cors = "0.6.1"
chrono = "0.4.23"
dotenv = "0.15.0"
reqwest = "0.11.10"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
skool-agenda = { path = "../agenda" }
mime = "0.3.16"
auth1-sdk = { git = "https://github.com/skolorna/auth1", features = ["actix"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "offline"] }
clap = { version = "3.2.20", features = ["derive", "env"] }
aes-gcm-siv = "0.11.1"
rmp-serde = "1.1.1"
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
deadpool-redis = "0.11.0"
anyhow = "1.0.66"
blake3 = "1.3.1"
base64 = "0.13.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
tracing-opentelemetry = "0.18.0"
actix-web-opentelemetry = "0.13.0"
opentelemetry-semantic-conventions = "0.10.0"
icalendar = { workspace = true }
