[package]
name = "skool-webtoken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
aes-gcm-siv = "0.10.3"
rmp-serde = "0.15.5"
rand = "0.8.4"
thiserror = "1.0.30"
serde = { version = "1.0.133", features = ["derive"] }
base64 = "0.13.0"
structopt = "0.3.26"
actix-web-httpauth = "0.6.0-beta.7"
hex = "0.4.3"
